--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "description": "Backend One-Stop Shopping App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "metagenes",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
+    "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.18.1",
     "cors": "^2.8.5",
+    "datauri": "^2.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "mysql": "^2.17.1",
+    "nodemon": "^2.0.2"
   }
 }
