--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.9.1"
   }
 }
